--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,5 @@
 language: python
 python:
-   - "3.3"
-# Command to install dependencies
-install:
-  - pip install -r requirements.txt
-  - pip install flake8
-script:
-  - flake8 import_ldraw.py
+  - 3.3
+install: pip install -r requirements.txt
+script: flake8 import_ldraw.py
