Update Flake8 ignore and Travis notification settings

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,13 @@
 language: python
 python:
   - 3.3
+
 install: pip install -r requirements.txt
-script: flake8 --max-complexity 10 import_ldraw.py
+script: flake8 --max-complexity 10 .
+
+notifications:
+  email:
+    recipients:
+      - LDR-Importer@noreply.github.com
+    on_success: change
+    on_failure: change
