--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,10 @@ python:
   - 3.3
   - 3.4
 
-install: pip install -r requirements.txt
-script: flake8 --max-complexity 10 .
+install: pip install -r requirements.txt --use-mirrors
+script:
+  - flake8 --max-complexity 10 .
+  - pep257 . --explain
 
 notifications:
   email:
