--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
   - 3.3
   - 3.4
 
-install: pip install -r requirements.txt --use-mirrors
+install: pip install -r requirements.txt
 script:
   - flake8 --max-complexity 10 .
   - pep257 . --explain
