--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+sudo: false
 language: python
 python:
   - 3.3
@@ -7,10 +8,3 @@ install: pip install -r requirements.txt
 script:
   - flake8 --max-complexity 10 .
   - pep257 . --explain
-
-notifications:
-  email:
-    recipients:
-      - LDR-Importer@noreply.github.com
-    on_success: change
-    on_failure: change
